refactor: tfhe-java is the native lib wrapper